--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -160,14 +160,7 @@
             >
               Settings
             </a>
-            <a
-              href="#"
-              class="block px-4 py-2 text-sm text-gray-700"
-              role="menuitem"
-              tabindex="-1"
-            >
-              Sign out
-            </a>
+            <%= link_to "Sign out", destroy_user_session_path, class: "block px-4 py-2 text-sm text-gray-700", data: { turbo_method: :delete } %>
           </div>
         </div>
       </div>
